Add new team member.

--- a/Source/AnkkBoard.Web/Views/Home/Index.cshtml
+++ b/Source/AnkkBoard.Web/Views/Home/Index.cshtml
@@ -98,8 +98,10 @@
             } else if (nameId === '2') {
                 name = '<span style="background-color: #00CCCC"> MK <span>';
             } else if (nameId === '3') {
-                name = '<span style="background-color: #009900"> SG <span>';
+                name = '<span style="background-color: #009900"> SAG <span>';
             } else if (nameId === '4') {
+                name = '<span style="background-color: #C0C0C0"> SVG <span>';
+            } else if (nameId === '5') {
                 name = '<span style="background-color: #CCCC00"> TD <span>';
             }
 
