--- a/Source/AnkkBoard.Web/Views/Home/NewTask.cshtml
+++ b/Source/AnkkBoard.Web/Views/Home/NewTask.cshtml
@@ -26,8 +26,9 @@
                        new { value = 0 , text = "---Select Creator---"  },
                        new { value = 1 , text = "Andriyan Krastev"  },
                        new { value = 2 , text = "Milen Kozhuharov" },
-                       new { value = 3 , text = "Svetoslav Georgiev"},
-                       new { value = 4 , text = "Teodor Dochev"}
+                       new { value = 3 , text = "Svetoslav A. Georgiev"},
+                       new { value = 4 , text = "Svetoslav V. Georgiev"},
+                       new { value = 5 , text = "Teodor Dochev"}
                     },
                   "value",
                   "text",
@@ -43,11 +44,12 @@
         <div class="col-md-6 col-sm-6 col-xs-12">           
             @Html.DropDownListFor(m => m.Assigner, new SelectList(
                   new List<Object>{
-                       new { value = 0 , text = "---Select Assigner---"  },
+                       new { value = 0 , text = "---Select Creator---"  },
                        new { value = 1 , text = "Andriyan Krastev"  },
                        new { value = 2 , text = "Milen Kozhuharov" },
-                       new { value = 3 , text = "Svetoslav Georgiev"},
-                       new { value = 4 , text = "Teodor Dochev"}
+                       new { value = 3 , text = "Svetoslav A. Georgiev"},
+                       new { value = 4 , text = "Svetoslav V. Georgiev"},
+                       new { value = 5 , text = "Teodor Dochev"}
                     },
                   "value",
                   "text",
