--- a/Source/AnkkBoard.Web/Views/Home/Index.cshtml
+++ b/Source/AnkkBoard.Web/Views/Home/Index.cshtml
@@ -1,5 +1,38 @@
 ﻿@model IList<AnkkBoard.Web.Models.VM.TaskViewModel>
 
+@*<div class="portlet ui-widget ui-widget-content ui-helper-clearfix ui-corner-all">
+    <input class="task-id" type="hidden" value="1">
+    <div class="portlet-header ui-widget-header ui-corner-all ui-sortable-handle">
+        <span style="background-color: #707070">
+            L
+        </span>
+        Task 1133
+    </div>
+    <div class="portlet-content">
+        Ankk
+    </div>
+    <div>
+        Created by
+        <span style="background-color: #CC0000">
+            AK
+            <span>
+            </span>
+        </span>
+    </div>
+    <div>
+        Assign to
+        <span style="background-color: #00CCCC">
+            MK <span>
+            </span>
+        </span>
+    </div>
+    <div>
+        <button type="button" class="btn btn-primary btn-xs">Edit</button>
+        <button type="button" class="btn btn-primary btn-xs">Move to Done</button>
+        <button type="button" class="btn btn-danger btn-xs">Delete</button>
+    </div>
+</div>*@
+
 <div id="tasks" class="column">
     <h3 class="text-center">
         Tasks
@@ -25,7 +58,7 @@
 </div>
 
 @section scripts {
-    <script>       
+    <script>
         $(".column").sortable({
             connectWith: ".column",
             handle: ".portlet-header",
@@ -43,8 +76,6 @@
                             window.location.reload();
                         }
                     });
-
-                    console.log($(ui.item));
                 }
             }
         });
@@ -59,16 +90,16 @@
             var icon = $( this );
             icon.toggleClass( "ui-icon-minusthick ui-icon-plusthick" );
             icon.closest( ".portlet" ).find( ".portlet-content" ).toggle();
-        });      
+        });
 
         var model = @Html.Raw(Json.Encode(Model));
 
-        for (var i = 0; i < model.length; i++) {            
-            var taskContainer = $('<div />').addClass('portlet ui-widget ui-widget-content ui-helper-clearfix ui-corner-all');
-
+        for (var i = 0; i < model.length; i++) {
+            var taskContainer = $('<div />').addClass('portlet ui-widget ui-widget-content ui-helper-clearfix ui-corner-all');           
+            
             var taskId = $('<input class="task-id" type="hidden"/>').val(model[i].Id);
             taskId.appendTo(taskContainer);
-            var taskTitle = $('<div />').addClass('portlet-header ui-widget-header ui-corner-all ui-sortable-handle').text(model[i].Title);
+            var taskTitle = $('<div />').addClass('portlet-header ui-widget-header ui-corner-all ui-sortable-handle').html(checkPriority(model[i].Priority) + model[i].Title);
             taskTitle.appendTo(taskContainer);
             var taskContent = $('<div />').addClass('portlet-content').text(model[i].Description);
             taskContent.appendTo(taskContainer);
@@ -76,6 +107,15 @@
             taskCreator.appendTo(taskContainer);
             var taskAssigner = $('<div />').html("Assign to " + checkName(model[i].Assigner));
             taskAssigner.appendTo(taskContainer);
+
+            var buttonContainer = $('<div />');
+            var editBtn = $('<a class="btn btn-primary btn-xs">Edit</a>').attr('href', '/Home/EditTask/' + model[i].Id);
+            editBtn.appendTo(buttonContainer);
+            var deleteBtn = $('<a class="btn btn-primary btn-xs" style="margin-left: 5px; margin-right: 5px">Move to Done</a>');
+            deleteBtn.appendTo(buttonContainer);
+            var moveToDoneBtn = $('<span class="delete-btn btn btn-danger btn-xs">Delete</span>');
+            moveToDoneBtn.appendTo(buttonContainer);
+            buttonContainer.appendTo(taskContainer);
 
             var taskStatus = model[i].TaskStatus;
 
@@ -89,7 +129,7 @@
                 $('#testing-phase').append(taskContainer);
             }
         }
-        
+
         function checkName(nameId) {
             var name = '';
 
@@ -107,5 +147,42 @@
 
             return name;
         }
+
+        function checkPriority(priorityId) {
+            var priority = '';
+            //debugger;
+            if (priorityId == '1') {
+                priority = '<span style="background-color: #E75B73"> H </span>';
+            } else if (priorityId == '2') {
+                priority = '<span style="background-color: #EF9233"> M </span>';
+            } else if (priorityId == '3') {
+                priority = '<span style="background-color: #707070"> L </span>';
+            }
+
+            return priority;
+        }
+
+        $('.delete-btn').on('click', function ( ) {
+            var taskId = $(this)
+                .closest('.portlet')
+                .children()
+                .first()
+                .val();
+           
+            if (taskId != null || taskId != undefined) {
+                $.ajax({
+                    type: 'POST',
+                    url: '@Url.Action("DeleteTask", "Home")',
+                    data: { id: taskId },
+                    success: function () {
+                        alert("Delete completed!");
+                        window.location.reload();
+                    },
+                    error: function (ex) {
+                        alert('Delete uncompleted!');
+                    }
+                });
+            }
+        });
     </script>
 }
