--- a/Source/AnkkBoard.Web/Views/Home/NewTask.cshtml
+++ b/Source/AnkkBoard.Web/Views/Home/NewTask.cshtml
@@ -2,62 +2,8 @@
 
 @using (Html.BeginForm("NewTask", "Home", FormMethod.Post, new { @class = "form-horizontal form-label-left", style = "margin-top: 30px" }))
 {
-    <div class="form-group">
-        @Html.LabelFor(m => m.Title, new { @class = "control-label col-md-3 col-sm-3 col-xs-12" })
-        <div class="col-md-6 col-sm-6 col-xs-12">
-            @Html.TextBoxFor(m => m.Title, new { @class = "form-control col-md-7 col-xs-12" })
-            @Html.ValidationMessageFor(m => m.Title, null, new { @class = "text-danger" })
-        </div>
-    </div>
-   
-    <div class="form-group">
-        @Html.LabelFor(m => m.Description, new { @class = "control-label col-md-3 col-sm-3 col-xs-12" })
-        <div class="col-md-6 col-sm-6 col-xs-12">
-            @Html.TextAreaFor(m => m.Description, 15, 20, new { @class = "form-control col-md-7 col-xs-12" })
-            @Html.ValidationMessageFor(m => m.Title, null, new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.Creator, new { @class = "control-label col-md-3 col-sm-3 col-xs-12" })
-        <div class="col-md-6 col-sm-6 col-xs-12">
-            @Html.DropDownListFor(m => m.Creator, new SelectList(
-                  new List<Object>{
-                       new { value = 0 , text = "---Select Creator---"  },
-                       new { value = 1 , text = "Andriyan Krastev"  },
-                       new { value = 2 , text = "Milen Kozhuharov" },
-                       new { value = 3 , text = "Svetoslav A. Georgiev"},
-                       new { value = 4 , text = "Svetoslav V. Georgiev"},
-                       new { value = 5 , text = "Teodor Dochev"}
-                    },
-                  "value",
-                  "text",
-                  0),
-                  new { @class = "form-control col-md-7 col-xs-12" }
-                   )
-            @Html.ValidationMessageFor(m => m.Title, null, new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.Assigner, new { @class = "control-label col-md-3 col-sm-3 col-xs-12" })
-        <div class="col-md-6 col-sm-6 col-xs-12">           
-            @Html.DropDownListFor(m => m.Assigner, new SelectList(
-                  new List<Object>{
-                       new { value = 0 , text = "---Select Creator---"  },
-                       new { value = 1 , text = "Andriyan Krastev"  },
-                       new { value = 2 , text = "Milen Kozhuharov" },
-                       new { value = 3 , text = "Svetoslav A. Georgiev"},
-                       new { value = 4 , text = "Svetoslav V. Georgiev"},
-                       new { value = 5 , text = "Teodor Dochev"}
-                    },
-                  "value",
-                  "text",
-                  0),
-                  new { @class = "form-control col-md-7 col-xs-12" }
-                   )
-            @Html.ValidationMessageFor(m => m.Title, null, new { @class = "text-danger" })
-        </div>
+    <div class="row">
+        @Html.EditorForModel()
     </div>
 
     <div class="form-group text-center">
