--- a/Source/AnkkBoard.Web/Views/Shared/_Layout.cshtml
+++ b/Source/AnkkBoard.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AnkkBoard</title>
+    <title>Storyboard</title>
+    <link rel="shortcut icon" type="image/ico" href="~/favicon.ico">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/Content/jquery-ui")
