--- a/Source/AnkkBoard.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Source/AnkkBoard.Web/Views/Shared/_LoginPartial.cshtml
@@ -9,6 +9,9 @@
         <li>
             @Html.ActionLink("New Task", "NewTask", "Home")
         </li>
+        <li>
+            @Html.ActionLink("Done Tasks", "DoneTasks", "Home")
+        </li>
     </ul>
 
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
