--- a/Source/AnkkBoard.Web/Views/Home/Index.cshtml
+++ b/Source/AnkkBoard.Web/Views/Home/Index.cshtml
@@ -130,6 +130,7 @@
             }
         }
 
+        // Checkpoint: add new user
         function checkName(nameId) {
             var name = '';
 
@@ -143,6 +144,10 @@
                 name = '<span style="background-color: #C0C0C0"> SVG <span>';
             } else if (nameId === '5') {
                 name = '<span style="background-color: #CCCC00"> TD <span>';
+            } else if (nameId === '6') {
+                name = '<span style="background-color: #CC00CC"> DI <span>';
+            } else if (nameId === '7') {
+                name = '<span style="background-color: #FF66B2"> NI <span>';
             }
 
             return name;
